--- a/devel/py-test-subtests/Makefile
+++ b/devel/py-test-subtests/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.11 2024/11/11 07:28:27 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/16 05:56:42 adam Exp $
 
-DISTNAME=	pytest_subtests-0.13.1
+DISTNAME=	pytest_subtests-0.14.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/py//:S/_/-/}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pytest-subtests/}
@@ -11,11 +11,9 @@ COMMENT=	Unittest subTest() support and subtests fixture
 LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm-[0-9]*:../../devel/py-setuptools_scm
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=6.2.3:../../devel/py-setuptools_scm
 DEPENDS+=	${PYPKGPREFIX}-attrs>=19.2.0:../../devel/py-attrs
-DEPENDS+=	${PYPKGPREFIX}-test>=7.0:../../devel/py-test
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
+DEPENDS+=	${PYPKGPREFIX}-test>=7.4:../../devel/py-test
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
