--- a/graphics/cglm/Makefile
+++ b/graphics/cglm/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.1 2021/05/20 19:52:31 nia Exp $
+# $NetBSD: Makefile,v 1.2 2024/12/16 07:59:07 wiz Exp $
 
-DISTNAME=	cglm-0.8.2
+DISTNAME=	cglm-0.9.4
 CATEGORIES=	graphics
 MASTER_SITES=	${MASTER_SITE_GITHUB:=recp/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
