--- a/x11/zenity/Makefile
+++ b/x11/zenity/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.121 2024/11/14 22:22:33 wiz Exp $
+# $NetBSD: Makefile,v 1.122 2024/12/16 11:12:54 jperkin Exp $
 
 DISTNAME=	zenity-4.0.1
 PKGREVISION=	3
@@ -19,6 +19,8 @@ USE_TOOLS+=		itstool msgfmt pkg-config
 
 # "error: 'for' loop initial declarations are only allowed in C99 mode"
 FORCE_C_STD=		c99
+
+CPPFLAGS.SunOS+=	-D__EXTENSIONS__
 
 .include "../../devel/meson/build.mk"
 
