--- a/net/ddclient/Makefile
+++ b/net/ddclient/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.53 2024/12/02 17:59:49 abs Exp $
+# $NetBSD: Makefile,v 1.54 2024/12/17 08:04:40 jperkin Exp $
 
 DISTNAME=	ddclient-3.11.2
+PKGREVISION=	1
 CATEGORIES=	net
 MASTER_SITES=	${MASTER_SITE_GITHUB:=ddclient/}
 GITHUB_TAG=	v${DISTNAME:S/ddclient-//}
