--- a/www/w3m-img/Makefile
+++ b/www/w3m-img/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.34 2024/04/08 06:01:21 wiz Exp $
+# $NetBSD: Makefile,v 1.35 2024/12/17 13:35:10 ryoon Exp $
 
 PKGNAME=	w3m-img-${W3M_PKGVERS}
-PKGREVISION=	2
+PKGREVISION=	3
 COMMENT=	Multilingualized version of w3m with inline image support
 
 CONFLICTS+=	w3m-[0-9]*
