--- a/www/w3m/Makefile
+++ b/www/w3m/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.99 2024/04/08 06:01:21 wiz Exp $
+# $NetBSD: Makefile,v 1.100 2024/12/17 13:35:09 ryoon Exp $
 
 PKGNAME=	w3m-${W3M_PKGVERS}
-PKGREVISION=	4
+PKGREVISION=	5
 COMMENT=	Multilingualized version of a pager/text-based browser w3m
 
 CONFLICTS+=	w3m-img-[0-9]*
