--- a/devel/p5-Test-MockModule/Makefile
+++ b/devel/p5-Test-MockModule/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.36 2024/11/16 12:05:20 wiz Exp $
+# $NetBSD: Makefile,v 1.37 2024/12/25 01:40:14 wen Exp $
 
-DISTNAME=	Test-MockModule-v0.178.0
+DISTNAME=	Test-MockModule-v0.179.0
 PKGNAME=	p5-${DISTNAME:S/v0/0/}
-PKGREVISION=	1
 CATEGORIES=	devel perl5 net
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Test/}
 
