--- a/devel/py-click/Makefile
+++ b/devel/py-click/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.28 2023/08/24 19:46:12 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2024/12/25 10:09:08 adam Exp $
 
-DISTNAME=	click-8.1.7
+DISTNAME=	click-8.1.8
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=c/click/}
@@ -10,14 +10,9 @@ HOMEPAGE=	https://palletsprojects.com/p/click/
 COMMENT=	Simple wrapper around optparse for powerful command line utilities
 LICENSE=	modified-bsd
 
-TEST_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
+TOOL_DEPENDS+=	${PYPKGPREFIX}-flit_core-[0-9]*:../../devel/py-flit_core
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-do-test:
-	cd ${WRKSRC} && ${SETENV} ${TEST_ENV} pytest-${PYVERSSUFFIX} tests
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
