--- a/graphics/libwebp/Makefile
+++ b/graphics/libwebp/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.43 2024/04/15 12:40:36 ryoon Exp $
+# $NetBSD: Makefile,v 1.44 2024/12/25 10:57:30 adam Exp $
 
-DISTNAME=	libwebp-1.4.0
+DISTNAME=	libwebp-1.5.0
 CATEGORIES=	graphics
 MASTER_SITES=	https://storage.googleapis.com/downloads.webmproject.org/releases/webp/
 
