--- a/x11/libxfce4util/Makefile
+++ b/x11/libxfce4util/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.76 2024/11/17 07:16:58 wiz Exp $
+# $NetBSD: Makefile,v 1.77 2024/12/25 11:05:57 bsiegert Exp $
 
-PKGREVISION= 4
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-DISTNAME=	libxfce4util-4.18.2
+DISTNAME=	libxfce4util-4.20.0
 CATEGORIES=	x11
 MASTER_SITES+=	https://archive.xfce.org/src/xfce/libxfce4util/${PKGVERSION_NOREV:R}/
 
