--- a/devel/xfce4-conf/Makefile
+++ b/devel/xfce4-conf/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.49 2024/11/17 07:15:47 wiz Exp $
+# $NetBSD: Makefile,v 1.50 2024/12/25 11:07:01 bsiegert Exp $
 
-PKGREVISION= 4
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	4.18.3
+VERSION=	4.20.0
 DISTNAME=	xfconf-${VERSION}
 PKGNAME=	xfce4-conf-${VERSION}
 CATEGORIES=	devel
