--- a/x11/libxfce4ui/patches/patch-libxfce4kbd-private_Makefile.in
+++ b/x11/libxfce4ui/patches/patch-libxfce4kbd-private_Makefile.in
@@ -1,12 +1,12 @@
-$NetBSD: patch-libxfce4kbd-private_Makefile.in,v 1.3 2021/11/30 14:10:37 gutteridge Exp $
+$NetBSD: patch-libxfce4kbd-private_Makefile.in,v 1.4 2024/12/25 11:09:04 bsiegert Exp $
 
 Adjust config path.
 
---- libxfce4kbd-private/Makefile.in.orig	2021-09-05 21:59:52.000000000 +0000
+--- libxfce4kbd-private/Makefile.in.orig	2024-12-15 08:56:03.000000000 +0000
 +++ libxfce4kbd-private/Makefile.in
-@@ -540,7 +540,7 @@ top_srcdir = @top_srcdir@
- @ENABLE_KEYBOARD_LIBRARY_TRUE@	$(LIBXFCE4UTIL_LIBS) \
- @ENABLE_KEYBOARD_LIBRARY_TRUE@	$(XFCONF_LIBS)
+@@ -577,7 +577,7 @@ top_srcdir = @top_srcdir@
+ @ENABLE_KEYBOARD_LIBRARY_TRUE@libxfce4kbd_private_3_la_SOURCES = \
+ @ENABLE_KEYBOARD_LIBRARY_TRUE@	$(libxfce4kbd_sources)
  
 -@ENABLE_KEYBOARD_LIBRARY_TRUE@settingsdir = $(sysconfdir)/xdg/xfce4/xfconf/xfce-perchannel-xml
 +@ENABLE_KEYBOARD_LIBRARY_TRUE@settingsdir = $(datadir)/examples/xfce4/xfconf/xfce-perchannel-xml
