--- a/devel/xfce4-dev-tools/Makefile
+++ b/devel/xfce4-dev-tools/Makefile
@@ -1,9 +1,8 @@
-# $NetBSD: Makefile,v 1.59 2024/11/17 07:15:47 wiz Exp $
+# $NetBSD: Makefile,v 1.60 2024/12/25 19:57:44 bsiegert Exp $
 
-PKGREVISION= 9
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	4.18.0
+VERSION=	4.20.0
 DISTNAME=	xfce4-dev-tools-${VERSION}
 CATEGORIES=	devel
 MASTER_SITES=	https://archive.xfce.org/src/xfce/xfce4-dev-tools/${VERSION:R}/
@@ -11,13 +10,16 @@ MASTER_SITES=	https://archive.xfce.org/src/xfce/xfce4-dev-tools/${VERSION:R}/
 HOMEPAGE=	http://users.xfce.org/~benny/projects/xfce4-dev-tools/
 COMMENT=	Xfce development tools
 
-USE_TOOLS+=	bash:run
-REPLACE_BASH+=	helpers/xfce-build helpers/xfce-do-release
-REPLACE_BASH+=	helpers/xfce-get-release-notes
-REPLACE_BASH+=	helpers/xfce-get-translations helpers/xfce-update-news
+USE_TOOLS+=		bash:run
+REPLACE_BASH+=		helpers/xfce-build helpers/xfce-do-release.in
+REPLACE_BASH+=		helpers/xfce-get-release-notes
+REPLACE_BASH+=		helpers/xfce-get-translations helpers/xfce-update-news
+REPLACE_BASH+=		scripts/xdt-check-abi
+REPLACE_PYTHON+=	scripts/xdt-gen-visibility
 
 GNU_CONFIGURE=	yes
 
 MAKE_DIRS+=	${PREFIX}/share/xfce4
 
+.include "../../lang/python/application.mk"
 .include "../../mk/bsd.pkg.mk"
