--- a/devel/abseil/Makefile
+++ b/devel/abseil/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.27 2024/08/06 13:20:22 wiz Exp $
+# $NetBSD: Makefile,v 1.28 2024/12/25 20:22:48 schmonz Exp $
 
 DISTNAME=	abseil-20240722.0
+PKGREVISION=	1
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=abseil/}
 GITHUB_PROJECT=	abseil-cpp
