--- a/devel/blosc2/Makefile
+++ b/devel/blosc2/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.22 2024/12/03 08:06:52 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2024/12/26 08:01:51 adam Exp $
 
-DISTNAME=	blosc2-2.15.1
+DISTNAME=	blosc2-2.15.2
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=Blosc/}
 GITHUB_PROJECT=	c-blosc2
