--- a/devel/py-test-mypy-plugins/Makefile
+++ b/devel/py-test-mypy-plugins/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2024/11/11 07:28:25 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2024/12/26 08:09:41 adam Exp $
 
-DISTNAME=	pytest-mypy-plugins-3.1.2
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/^py//}
+DISTNAME=	pytest_mypy_plugins-3.2.0
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/^py//:S/_/-/g}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/pytest-mypy-plugins/}
 
@@ -22,8 +22,6 @@ DEPENDS+=	${PYPKGPREFIX}-tomlkit>=0.11:../../textproc/py-tomlkit
 DEPENDS+=	${PYPKGPREFIX}-yaml-[0-9]*:../../textproc/py-yaml
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 SUBST_CLASSES+=		cmd
 SUBST_STAGE.cmd=	pre-configure
