--- a/net/py-python-socks/Makefile
+++ b/net/py-python-socks/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.17 2024/11/11 07:28:50 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2024/12/26 09:03:16 adam Exp $
 
-DISTNAME=	python_socks-2.5.3
+DISTNAME=	python_socks-2.6.0
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/python-socks/}
@@ -11,11 +11,16 @@ COMMENT=	Core proxy (SOCKS4, SOCKS5, HTTP tunneling) functionality for Python
 LICENSE=	apache-2.0
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
-# asyncio
-DEPENDS+=	${PYPKGPREFIX}-async-timeout>=3.0.1:../../devel/py-async-timeout
+TEST_DEPENDS+=	${PYPKGPREFIX}-flask-[0-9]*:../../www/py-flask
 TEST_DEPENDS+=	${PYPKGPREFIX}-trustme-[0-9]*:../../security/py-trustme
 
 USE_LANGUAGES=	# none
+
+.include "../../lang/python/pyversion.mk"
+.if ${PYTHON_VERSION} < 311
+# asyncio
+DEPENDS+=	${PYPKGPREFIX}-async-timeout>=4.0:../../devel/py-async-timeout
+.endif
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
