--- a/devel/re2c/Makefile
+++ b/devel/re2c/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.29 2023/08/24 12:25:31 wiz Exp $
+# $NetBSD: Makefile,v 1.30 2024/12/26 11:47:46 wiz Exp $
 
-DISTNAME=	re2c-3.1
+DISTNAME=	re2c-4.0.2
 CATEGORIES=	devel
 MASTER_SITES=	${MASTER_SITE_GITHUB:=skvadrik/}
 GITHUB_RELEASE=	${PKGVERSION_NOREV}
@@ -14,8 +14,7 @@ LICENSE=	public-domain
 USE_LANGUAGES=		c c++
 USE_TOOLS+=		bison gmake
 GNU_CONFIGURE=		yes
-# as of 3.0:
-# FAIL: run_tests.py
+# needs 'make install'
 TEST_TARGET=		check
 PYTHON_FOR_BUILD_ONLY=	tool
 
