--- a/devel/py-aiosignal/Makefile
+++ b/devel/py-aiosignal/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.2 2022/11/09 08:51:49 adam Exp $
+# $NetBSD: Makefile,v 1.3 2024/12/26 11:53:45 wiz Exp $
 
-DISTNAME=	aiosignal-1.3.1
+DISTNAME=	aiosignal-1.3.2
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=a/aiosignal/}
@@ -10,16 +10,12 @@ HOMEPAGE=	https://github.com/aio-libs/aiosignal
 COMMENT=	List of registered asynchronous callbacks
 LICENSE=	apache-2.0
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=0:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-frozenlist>=1.1.0:../../devel/py-frozenlist
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-asyncio-[0-9]*:../../devel/py-test-asyncio
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
-do-test:
-	cd ${WRKSRC} && ${SETENV} ${TEST_ENV} pytest-${PYVERSSUFFIX} tests
-
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
