--- a/ham/xlog/Makefile
+++ b/ham/xlog/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.112 2024/11/17 07:16:13 wiz Exp $
+# $NetBSD: Makefile,v 1.113 2024/12/26 13:32:39 gdt Exp $
 #
 
 DISTNAME=	xlog-2.0.25
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	ham
 MASTER_SITES=	https://download.savannah.gnu.org/releases/xlog/
 LICENSE=	gnu-gpl-v3
