--- a/mail/mu/Makefile
+++ b/mail/mu/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2024/12/07 15:19:52 nia Exp $
+# $NetBSD: Makefile,v 1.13 2024/12/26 16:38:17 ktnb Exp $
 
-DISTNAME=	mu-1.12.7
-PKGREVISION=	3
+DISTNAME=	mu-1.12.8
 CATEGORIES=	mail
 MASTER_SITES=	${MASTER_SITE_GITHUB:=djcb/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
