--- a/converters/py-charset-normalizer/Makefile
+++ b/converters/py-charset-normalizer/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2024/11/11 07:27:55 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2024/12/26 17:20:37 adam Exp $
 
-DISTNAME=	charset_normalizer-3.4.0
+DISTNAME=	charset_normalizer-3.4.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/-/}
 CATEGORIES=	converters python
 MASTER_SITES=	${MASTER_SITE_PYPI:=c/charset-normalizer/}
@@ -11,6 +11,7 @@ COMMENT=	Universal Charset Detector
 LICENSE=	mit
 
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm-[0-9]*:../../devel/py-setuptools_scm
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov>=4.1.0:../../devel/py-test-cov
 
 USE_LANGUAGES=	# none
