--- a/devel/py-zope.testrunner/Makefile
+++ b/devel/py-zope.testrunner/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.11 2024/11/11 07:28:31 wiz Exp $
+# $NetBSD: Makefile,v 1.12 2024/12/26 17:29:22 adam Exp $
 
-DISTNAME=	zope.testrunner-6.6
-PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
+DISTNAME=	zope_testrunner-6.6.1
+PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/_/./}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=z/zope.testrunner/}
 
@@ -9,6 +9,8 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://github.com/zopefoundation/zope.testrunner
 COMMENT=	Zope testrunner script
 LICENSE=	zpl-2.1
+
+WHEEL_NAME=	${DISTNAME:S/_/./}
 
 DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 DEPENDS+=	${PYPKGPREFIX}-zope.exceptions-[0-9]*:../../devel/py-zope.exceptions
