--- a/print/tex-microtype/Makefile
+++ b/print/tex-microtype/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2023/04/08 10:50:06 markd Exp $
+# $NetBSD: Makefile,v 1.18 2024/12/26 18:17:15 riastradh Exp $
 
 DISTNAME=	microtype
 PKGNAME=	tex-${DISTNAME}-3.1a
+PKGREVISION=	1
 TEXLIVE_REV=	66587
 
 MAINTAINER=	minskim@NetBSD.org
@@ -9,6 +10,7 @@ HOMEPAGE=	https://ctan.org/pkg/microtype
 COMMENT=	Subliminal refinements towards typographical perfection
 LICENSE=	lppl-1.3c
 
+DEPENDS+=	tex-etoolbox-[0-9]*:../../devel/tex-etoolbox
 DEPENDS+=	tex-graphics-[0-9]*:../../print/tex-graphics
 DEPENDS+=	tex-pdftex>=1.30:../../print/tex-pdftex
 
