--- a/x11/xfce4-exo/Makefile
+++ b/x11/xfce4-exo/Makefile
@@ -1,10 +1,9 @@
-# $NetBSD: Makefile,v 1.87 2024/11/17 07:17:04 wiz Exp $
+# $NetBSD: Makefile,v 1.88 2024/12/26 18:28:45 bsiegert Exp $
 
-PKGREVISION= 9
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
-VERSION=	4.18.0
-DISTNAME=	exo-4.18.0
+VERSION=	4.20.0
+DISTNAME=	exo-4.20.0
 PKGNAME=	xfce4-${DISTNAME}
 CATEGORIES=	x11
 MASTER_SITES=	https://archive.xfce.org/src/xfce/exo/${PKGVERSION_NOREV:R}/
