--- a/x11/libxfce4util/Makefile
+++ b/x11/libxfce4util/Makefile
@@ -1,5 +1,6 @@
-# $NetBSD: Makefile,v 1.77 2024/12/25 11:05:57 bsiegert Exp $
+# $NetBSD: Makefile,v 1.78 2024/12/26 18:30:26 bsiegert Exp $
 
+PKGREVISION=	1
 .include "../../meta-pkgs/xfce4/Makefile.common"
 
 DISTNAME=	libxfce4util-4.20.0
@@ -12,4 +13,5 @@ PKGCONFIG_OVERRIDE=	libxfce4util/libxfce4util-1.0.pc.in
 
 MAKE_DIRS+=	${PREFIX}/include/xfce4
 
+.include "../../devel/gobject-introspection/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
